# tartancalib

./: .gitignore  CMakeLists.txt  Dockerfile
aslam_cv/aslam_cameras_april/: CMakeLists.txt  package.xml
aslam_cv/aslam_cameras_april/config/: example_apriltag_internal.yaml
aslam_cv/aslam_cameras_april/include/aslam/cameras/apriltag_internal/: ApriltagCanonicalModel.hpp  ApriltagInternalDebugVisualization.hpp  ApriltagInternalDetector.hpp  AslamBackendCalibrationRunner.hpp  CalibrationStateBundle.hpp  CornerMeasurement.hpp  DoubleSphereCameraModel.hpp  FrozenRound2BaselinePipeline.hpp  IterativeCoarseCalibrationExperiment.hpp  JointMeasurementSelection.hpp  JointReprojectionCostCore.hpp  JointReprojectionMeasurementBuilder.hpp  JointReprojectionOptimizer.hpp  JointReprojectionResidualEvaluator.hpp  KalibrBenchmark.hpp  MultiBoardInternalMeasurementRegenerator.hpp  MultiBoardOuterBootstrap.hpp  MultiScaleOuterTagDetector.hpp  OuterDetectionCache.hpp  OuterOnlyCameraInitializer.hpp  Stage5Benchmark.hpp  Stage5Runtime.hpp
aslam_cv/aslam_cameras_april/src/: detect_apriltag_internal_main.cpp  run_compare_internal_seed_methods_main.cpp  run_compare_outer_adaptive_subpix_vs_sphere_main.cpp  run_compare_outer_geometry_main.cpp  run_compare_stage5_with_kalibr_main.cpp  run_iterative_apriltag_internal_experiment_main.cpp  run_joint_reprojection_measurement_prep_main.cpp  run_joint_reprojection_optimization_main.cpp  run_multi_board_internal_regeneration_main.cpp  run_multi_board_outer_bootstrap_main.cpp  run_probe_local_sphere_patch_apriltag_main.cpp  run_stage5_backend_main.cpp  run_stage5_benchmark_main.cpp
aslam_cv/aslam_cameras_april/src/apriltag_internal/: ApriltagCanonicalModel.cpp  ApriltagInternalDebugVisualization.cpp  ApriltagInternalDetector.cpp  AslamBackendCalibrationRunner.cpp  CalibrationStateBundle.cpp  DoubleSphereCameraModel.cpp  FrozenRound2BaselinePipeline.cpp  IterativeCoarseCalibrationExperiment.cpp  JointMeasurementSelection.cpp  JointReprojectionCostCore.cpp  JointReprojectionMeasurementBuilder.cpp  JointReprojectionOptimizer.cpp  JointReprojectionResidualEvaluator.cpp  KalibrBenchmark.cpp  MultiBoardInternalMeasurementRegenerator.cpp  MultiBoardOuterBootstrap.cpp  MultiScaleOuterTagDetector.cpp  OuterDetectionCache.cpp  OuterOnlyCameraInitializer.cpp  Stage5Benchmark.cpp  Stage5Runtime.cpp
aslam_optimizer/aslam_backend/src/: Optimizer.cpp
compat/boost/: cstdint.hpp
compat/boost/detail/: endian.hpp
config/: mono_fisheye_calib_3_25_right-camchain.yaml
iterative_only_run/: experiment_summary.txt
iterative_only_run/baseline_homography/: summary.txt
iterative_only_run/iterative_coarse_model/iter_1/: summary.txt
iterative_only_run/iterative_coarse_model/iter_2/: summary.txt
iterative_only_run/iterative_coarse_model/iter_3/: summary.txt
result/.stage5_backend_cache/a5f7c893e3a5f9e3/: 0ab0f972f85330ed.yml  1ad02d4685e52fca.yml  2bfd2c01d3c45242.yml  32ab494974187441.yml  4157f9f27ee69839.yml  41b4a78ac4d88662.yml  4cd206f26807668e.yml  59b04a8a57b0484e.yml  669c05dc38935318.yml  76b42f222cab6d98.yml  78598fcef0498bd6.yml  789bc6fd3dd61ca7.yml  7f74e91d4b87e9b3.yml  82e56f06039a49ae.yml  95480c5fe9a1e599.yml  9ec6d97edf59af4c.yml  b1704e2c9e7f1989.yml  b404111427c9dfcb.yml  ce1753fe54cef6ac.yml
result/.stage5_backend_cache/d0b7f3cbd8257968/: 2159b934bd8923b4.yml  54ded1c2d6890506.yml  89ae3d89a858c09d.yml  9ec6d97edf59af4c.yml  c40843ea4444f875.yml
result/.stage5_backend_first50_fast_cache_v1/a5f7c893e3a5f9e3/: 040e16b3d6eef46c.yml  0a017da5999363ee.yml  0eb44aded270bc32.yml  154e88565fa43ee1.yml  1bc5dfaa7ab28e3a.yml  218b2dc1e6eefaed.yml  29af6d446dad303a.yml  2a28cbdfce3c0225.yml  2b5c065f65f24eb0.yml  2faf1998701c596b.yml  31ac244aa2b7dfcc.yml  31ceece0c892ff29.yml  386fe1eb2241f97e.yml  3964cb872763aa61.yml  3ddaa546ed8246dd.yml  47225ad786e8e835.yml  4834c12086fcd3de.yml  589c06e27119543a.yml  60c5a6fdfe9b2092.yml  65820d0352290c26.yml  6ca522ddc31ac095.yml  727af760b2dbc056.yml  7563b006db6a86d5.yml  762ede1ed3c3477a.yml  7d6fa03185c1a3ed.yml  81e6d5de3cbb7aa7.yml  87df5fb7534995a2.yml  8e4a1b9361b1bb25.yml  9193dbf22a9e698c.yml  92844f499cc4194b.yml  930ea88f57383bcd.yml  95b8411884fdeaa0.yml  96c3d8aeeeb07fee.yml  97b07d0edb271e83.yml  98bf48b4df89284e.yml  9b1b39d0f0144aea.yml  9ce1e9f89dd2ee5d.yml  a026e13e5362d2da.yml  a0d68ef88f77955a.yml  afa8168128cef566.yml  (+10 more)
result/.stage5_backend_full_fast_cache_v1/a5f7c893e3a5f9e3/: 00f63df53e269d97.yml  01370137ac31bbcf.yml  019110df535ee055.yml  0368ab8c8bfd48ba.yml  047ebf65f001a49b.yml  048d18791df0b406.yml  059031af699792a5.yml  05c9aa5c6804d6d9.yml  06708dfde8256fc8.yml  07202eda89d0e423.yml  073381ca31c0ef8b.yml  074a4af124ba207e.yml  087a617f610a1dd0.yml  092d88c4748d80a6.yml  093fca91739eaa49.yml  0949987822637c1c.yml  097f2240fb5f5f8e.yml  0a139d0f26a20c7f.yml  0b82a7c390e23b14.yml  0c543c46dae245d7.yml  0e2db4d0b7fa79e5.yml  0fa95d0f9ec41630.yml  10025f09a7e2a058.yml  10955f751c643d21.yml  1096a13085a68f2a.yml  110b64f5363b5395.yml  11e8c5cee1084b63.yml  12199f875799a0cb.yml  1304c4110de879d7.yml  132b41d0b889dc38.yml  136c3ba6019e04f9.yml  13e7965020ed2175.yml  155a3e881b8aa611.yml  15c5f07844a27904.yml  17079e0a9b550b0b.yml  17772cbb6e12eb99.yml  18e1623d73c3b144.yml  197c5ccab05d9a38.yml  1b33ef71cc4c9def.yml  1b5f0cd41e9c7506.yml  (+317 more)
result/detect_batch_20260416_155024/: summary.tsv
result/detect_batch_20260416_160015/: summary.tsv
result/detect_batch_cs_20260416_160937/: summary.tsv
result/iterative_sphere_lattice_compare_with_ss/: experiment_summary.txt
result/iterative_sphere_lattice_gt_experiment/: experiment_summary.txt
result/meeting_report_20260418_ss_ablation_summary/: README.md  example_apriltag_internal.yaml  no_ss_experiment_summary.txt  with_ss_experiment_summary.txt  with_ss_iter0_summary.txt
result/stage5_backend_first20_experiment_summary/: stage5_backend_experiment_summary.md
result/stage5_backend_full_experiment_summary/: stage5_backend_full_experiment_summary.md
tools/: summarize_stage5_backend_experiments.py
(+42 files in other folders)
