<?xml version="1.0" encoding="utf-8"?>
<package>
  <name>aslam_cameras_april</name>
  <description>aslam_cameras_april</description>
  <version>0.0.1</version>
  <maintainer email="paulfurgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sm_python</build_depend>
  <build_depend>aslam_cameras</build_depend>
  <build_depend>aslam_backend</build_depend>
  <build_depend>aslam_backend_expressions</build_depend>
  <build_depend>aslam_cv_backend</build_depend>
  <build_depend>aslam_time</build_depend>
  <build_depend>ethz_apriltag2</build_depend>
  <build_depend>numpy_eigen</build_depend>
  <build_depend>sm_common</build_depend>
  <build_depend>sm_logging</build_depend>
  <build_depend>sm_boost</build_depend>
  <build_depend>sm_eigen</build_depend>
  <build_depend>sm_kinematics</build_depend>
  <build_depend>python_module</build_depend>
  <build_depend>sparse_block_matrix</build_depend>

  <exec_depend>aslam_backend</exec_depend>
  <exec_depend>aslam_backend_expressions</exec_depend>
  <exec_depend>aslam_cv_backend</exec_depend>
  <exec_depend>aslam_time</exec_depend>
  <exec_depend>sm_kinematics</exec_depend>
  <exec_depend>sparse_block_matrix</exec_depend>
</package>
